# rusty-claw

./: .gitignore  README.md
crates/rustyclaw-cli/: Cargo.toml
crates/rustyclaw-cli/src/: agents.rs  cooldown_cmd.rs  daemon.rs  doctor.rs  main.rs  messaging.rs  setup.rs  viz_server.rs
crates/rustyclaw-core/src/: agent_setup.rs  config.rs  logging.rs  models.rs  pairing.rs  routing.rs
crates/rustyclaw-discord/: Cargo.toml
crates/rustyclaw-discord/src/: lib.rs  main.rs
crates/rustyclaw-heartbeat/: Cargo.toml
crates/rustyclaw-heartbeat/src/: lib.rs  main.rs
crates/rustyclaw-queue/: Cargo.toml
crates/rustyclaw-queue/src/: invoke.rs  lib.rs  main.rs  processor.rs
crates/rustyclaw-telegram/: Cargo.toml
crates/rustyclaw-telegram/src/: lib.rs  main.rs
crates/rustyclaw-viz/: Cargo.toml  index.html
crates/rustyclaw-viz/src/: app.rs
crates/rustyclaw-viz/src/components/: activity_log.rs  agent_card.rs  chain_flow.rs  header.rs  kanban_board.rs  queue_panel.rs  settings_page.rs
rusty-claw/: Cargo.toml  log.md
rusty-claw/crates/rustyclaw-cli/: Cargo.toml
rusty-claw/crates/rustyclaw-cli/src/: daemon.rs  pairing_cmd.rs  teams.rs
rusty-claw/crates/rustyclaw-core/: Cargo.toml
rusty-claw/crates/rustyclaw-core/src/: compaction.rs  context.rs  failover.rs  lib.rs  session.rs  skills.rs  smart_routing.rs  transcript.rs  types.rs
rusty-claw/crates/rustyclaw-discord/: Cargo.toml
rusty-claw/crates/rustyclaw-discord/src/: main.rs
rusty-claw/crates/rustyclaw-heartbeat/src/: main.rs
rusty-claw/crates/rustyclaw-queue/: Cargo.toml
rusty-claw/crates/rustyclaw-queue/src/: conversation.rs  main.rs  processor.rs
rusty-claw/crates/rustyclaw-telegram/src/: main.rs
rusty-claw/crates/rustyclaw-viz/: style.css
rusty-claw/crates/rustyclaw-viz/src/: lib.rs  types.rs
rusty-claw/crates/rustyclaw-viz/src/components/: mod.rs  send_form.rs  status_bar.rs
rusty-claw/templates/: AGENTS.md  USER.md
templates/: IDENTITY.md  TOOLS.md
