[package]
name = "rustyclaw-cli"
version = "0.1.0"
edition = "2021"
description = "CLI binary for Rusty Claw (replaces rustyclaw.sh)"

[[bin]]
name = "rustyclaw"
path = "src/main.rs"

[dependencies]
rustyclaw-core = { path = "../rustyclaw-core" }
rustyclaw-queue = { path = "../rustyclaw-queue" }
rustyclaw-heartbeat = { path = "../rustyclaw-heartbeat" }
rustyclaw-discord = { path = "../rustyclaw-discord" }
rustyclaw-telegram = { path = "../rustyclaw-telegram" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
colored = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
notify = { workspace = true }
