[package]
name = "rustyclaw-discord"
version = "0.1.0"
edition = "2021"
description = "Discord channel client for Rusty Claw"

[lib]
name = "rustyclaw_discord"
path = "src/lib.rs"

[[bin]]
name = "rustyclaw-discord"
path = "src/main.rs"

[dependencies]
rustyclaw-core = { path = "../rustyclaw-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serenity = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
