[package]
name = "rustyclaw-heartbeat"
version = "0.1.0"
edition = "2021"
description = "Heartbeat cron binary for Rusty Claw"

[[bin]]
name = "rustyclaw-heartbeat"
path = "src/main.rs"

[dependencies]
rustyclaw-core = { path = "../rustyclaw-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
