[package]
name = "rustyclaw-telegram"
version = "0.1.0"
edition = "2021"
description = "Telegram channel client for Rusty Claw"

[lib]
name = "rustyclaw_telegram"
path = "src/lib.rs"

[[bin]]
name = "rustyclaw-telegram"
path = "src/main.rs"

[dependencies]
rustyclaw-core = { path = "../rustyclaw-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
teloxide = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
