[package]
name = "rustyclaw-core"
version = "0.1.0"
edition = "2021"
description = "Shared types, config, routing, pairing, and logging for Rusty Claw"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tempfile = "3"
